--- a/index.html
+++ b/index.html
@@ -4,8 +4,10 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" /> 
     <link rel="icon" type="image/png" href="/src/assets/star_faviconV2.png"/>
+    <title>GRating</title>
   </head>
   <body>
+    <noscript>You need to enable JavaScript to run this app</noscript>
     <div id="root"></div>
     <script type="module" src="/src/index.tsx"></script>
   </body>
