--- a/markup/main.html
+++ b/markup/main.html
@@ -7,45 +7,44 @@
 </head>
 
 <body>
-
     <div>
-        <header class="header">
-            <div class="logo">
-                <img src="" alt="my hopefully future self made logo">
+        <header className="header">
+            <div className="logo">
+                <img src="" alt="my hopefully future self made logo" />
             </div>
         </header>
 
         <main>
-            <div class="games__container">
+            <div className="games__container">
                 <h1>Choose a game for evaluation!</h1>
-                <ul class="genre__list">
-                    <li class="genre__list--item">
+                <ul className="genre__list">
+                    <li className="genre__list--item">
                         <h2>SoulsLike</h2>
-                        <ul class="game__list">
-                            <li class="game__list--item">
+                        <ul className="game__list">
+                            <li className="game__list--item">
                                 <h3>Dark Souls 1</h3>
-                                <img src="" alt="game logo">
+                                <img src="" alt="game logo" />
                             </li>
-                            <li class="game__list--item">
+                            <li className="game__list--item">
                                 <h3>Dark Souls 3 </h3>
-                                <img src="" alt="game logo">
+                                <img src="" alt="game logo" />
                             </li>
-                            <li class="game__list--item">
+                            <li className="game__list--item">
                                 <h3>Elden Ring</h3>
-                                <img src="" alt="game logo">
+                                <img src="" alt="game logo" />
                             </li>
                         </ul>
                     </li>
-                    <li class="genre__list--item">
+                    <li className="genre__list--item">
                         <h2>MOBA</h2>
-                        <ul class="game__list">
-                            <li class="game__list--item">
-                                <img src="" alt="game logo">
+                        <ul className="game__list">
+                            <li className="game__list--item">
                                 <h3>Dota 2</h3>
+                                <img src="" alt="game logo" />
                             </li>
-                            <li class="game__list--item">
+                            <li className="game__list--item">
                                 <h3>League of Legends</h3>
-                                <img src="" alt="game logo">
+                                <img src="" alt="game logo" />
                             </li>
                         </ul>
                     </li>
@@ -53,18 +52,18 @@
 
             </div>
         </main>
-        <footer class="footer">
-            <div class="footer__container">
-                <div class="footer__contacts">
-                    <ul class="contacts__list">
-                        <li class="contacts__list--item">
-                            <img src="" alt="social image template">
+        <footer className="footer">
+            <div className="footer__container">
+                <div className="footer__contacts">
+                    <ul className="contacts__list">
+                        <li className="contacts__list--item">
+                            <img src="" alt="social image template" />
                         </li>
-                        <li class="contacts__list--item">
-                            <img src="" alt="social image template">
+                        <li className="contacts__list--item">
+                            <img src="" alt="social image template" />
                         </li>
-                        <li class="contacts__list--item">
-                            <img src="" alt="social image template">
+                        <li className="contacts__list--item">
+                            <img src="" alt="social image template" />
                         </li>
                     </ul>
                 </div>
