Отформатирует код prettier

--- a/markup/not-found.html
+++ b/markup/not-found.html
@@ -1,45 +1,43 @@
 <html lang="en">
-
-<head>
+  <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="icon" type="image/png" href="/src/assets/star_faviconV2.png" />
-</head>
+  </head>
 
-<body>
-
+  <body>
     <div class="content">
-        <header class="header">
-            <div class="logo">
-                <img src="" alt="my hopefully future self made logo">
-            </div>
-        </header>
+      <header class="header">
+        <div class="logo">
+          <img src="" alt="my hopefully future self made logo" />
+        </div>
+      </header>
 
-        <main>
-            <div class="not-found__page">
-                <h1 class="game__title">404 Not Found</h1>
-                <p class="not-found__text">Ooops this is not supposed to happen sorry :( try return to the</p>
-                <a href="#" class="">main page</a>
+      <main>
+        <div class="not-found__page">
+          <h1 class="game__title">404 Not Found</h1>
+          <p class="not-found__text">
+            Ooops this is not supposed to happen sorry :( try return to the
+          </p>
+          <a href="#" class="">main page</a>
+        </div>
+      </main>
 
-            </div>
-        </main>
-
-        <footer class="footer">
-            <div class="footer__container">
-                <ul class="contacts__list">
-                    <li class="contacts__list--item">
-                        <img src="" alt="social image template">
-                    </li>
-                    <li class="contacts__list--item">
-                        <img src="" alt="social image template">
-                    </li>
-                    <li class="contacts__list--item">
-                        <img src="" alt="social image template">
-                    </li>
-                </ul>
-            </div>
-        </footer>
+      <footer class="footer">
+        <div class="footer__container">
+          <ul class="contacts__list">
+            <li class="contacts__list--item">
+              <img src="" alt="social image template" />
+            </li>
+            <li class="contacts__list--item">
+              <img src="" alt="social image template" />
+            </li>
+            <li class="contacts__list--item">
+              <img src="" alt="social image template" />
+            </li>
+          </ul>
+        </div>
+      </footer>
     </div>
-</body>
-
+  </body>
 </html>
