--- a/markup/game.html
+++ b/markup/game.html
@@ -1,49 +1,49 @@
 <html lang="en">
-
-<head>
+  <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="icon" type="image/png" href="/src/assets/star_faviconV2.png" />
-</head>
+  </head>
 
-<body>
-
+  <body>
     <div class="content">
-        <header class="header">
-            <div class="logo">
-                <img src="" alt="my hopefully future self made logo">
-            </div>
-        </header>
+      <header class="header">
+        <div class="logo">
+          <img src="" alt="my hopefully future self made logo" />
+        </div>
+      </header>
 
-        <main>
-            <div class="game__page">
-                <img src="" alt="Dark Souls: REMASTERED screenshot" class="game__image">
-                <h1 class="game__title">Dark Souls: REMASTERED</h1>
-                <div class="game__rating">
-                    <div class="game__rating--stars">
-                        <span style="width: 90%"></span>
-                    </div>
-                </div>
+      <main>
+        <div class="game__page">
+          <img
+            src=""
+            alt="Dark Souls: REMASTERED screenshot"
+            class="game__image"
+          />
+          <h1 class="game__title">Dark Souls: REMASTERED</h1>
+          <div class="game__rating">
+            <div class="game__rating--stars">
+              <span style="width: 90%"></span>
+            </div>
+          </div>
+        </div>
+      </main>
 
-            </div>
-        </main>
-        
-        <footer class="footer">
-            <div class="footer__container">
-                <ul class="contacts__list">
-                    <li class="contacts__list--item">
-                        <img src="" alt="social image template">
-                    </li>
-                    <li class="contacts__list--item">
-                        <img src="" alt="social image template">
-                    </li>
-                    <li class="contacts__list--item">
-                        <img src="" alt="social image template">
-                    </li>
-                </ul>
-            </div>
-        </footer>
+      <footer class="footer">
+        <div class="footer__container">
+          <ul class="contacts__list">
+            <li class="contacts__list--item">
+              <img src="" alt="social image template" />
+            </li>
+            <li class="contacts__list--item">
+              <img src="" alt="social image template" />
+            </li>
+            <li class="contacts__list--item">
+              <img src="" alt="social image template" />
+            </li>
+          </ul>
+        </div>
+      </footer>
     </div>
-</body>
-
+  </body>
 </html>
